# judas

./: .gitignore  Main.hs  judas.cabal
Codec/Archive/: Zip.hs
Codec/Archive/Zip/: Internal.hs  Lazy.hs
Data/ClassFile/: ConstantPool.hs
Foreign/: LibZip.hs  LibZip.hsc
Foreign/LibZip/: Internal.hsc
